fix layout bug

--- a/src/styles/blocks/container.sass
+++ b/src/styles/blocks/container.sass
@@ -22,6 +22,9 @@
 
 
 @media screen and (min-width: 900px)
+  .aboveFold
+    display: none
+    
   .container
     display: flex
     flex-wrap: no-wrap
@@ -52,3 +55,5 @@
 
   .container__body--white
     background-color: white
+
+ 
