--- a/src/styles/blocks/sidebar.sass
+++ b/src/styles/blocks/sidebar.sass
@@ -33,8 +33,7 @@
     position: absolute 
     bottom: 0px 
     margin-left: 20px
-    height: [footer-height] 
-
+    
   p
     margin-bottom: 10px
 
@@ -108,7 +107,6 @@
     position: absolute 
     bottom: 0px 
     margin-left: 20px
-    height: [footer-height] 
 
   p
     margin-bottom: 10px
